--- a/app-backup/keep/ChangeLog
+++ b/app-backup/keep/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-backup/keep
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/keep/Attic/ChangeLog,v 1.3 2009/02/22 15:07:52 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/keep/Attic/ChangeLog,v 1.4 2009/06/13 11:35:47 tampakrap Exp $
+
+  13 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org> -keep-0.4.0.ebuild,
+  keep-0.4.0-r1.ebuild:
+  Slot change to 3.5
 
 *keep-0.4.0-r1 (22 Feb 2009)
 
